--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "1.12.2-1.0.1"
-group = "selim.submitissues" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "SubmitIssues"
+version = "1.12.2-1.0.0"
+group = "selim.geyser.core.forge" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "GeyserCoreForge"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
@@ -97,3 +97,11 @@ dependencies {
   runtime "mezz.jei:jei_${mc_version}:${jei_version}"
 }
 // end jei stuff
+
+sourceSets {
+    main {
+        java {
+            exclude '**/bukkit/*'
+        }
+    }
+}
